--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
 <div>
-      <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
-      <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
+      <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
+      <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
       <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
