--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div>
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
-      <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
+      <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
       <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
