--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav>
       <ul>
         <li><a href="#">Rápido Acesso</a></li>
+        <li><a href="participantes.html">Participantes</a></li>
       </ul>
     </nav>
     <header>
