--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </form>
     </div>
     <main>
-      <p>Este é um site para você ter acesso de forma simples e agilizada aos sites do colégio, entre outros.</p>
+      <p>Este é um site para você ter acesso de forma simples e rápida aos sites do estado usados no colégio, bons estudos!</p>
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
