--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <h2>Bem-vindo, Estudante!</h2>
     </header>
     <div class="search-container">
-        <form action="https://www.google.com/search" method="GET">
-            <input type="text" name="q" placeholder="Pesquisar no Google" autofocus>
+        <form action="https://search.brave.com/search" method="GET">
+            <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
             <input type="submit" value="Pesquisar">
         </form>
     </div>
