--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
     <main>
       <p>Este é um site para você ter acesso de forma simples e rápida aos sites do estado usados no colégio, bons estudos!</p>
-      <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
-      <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
-      <a href="https://classroom.google.com/"><button class="button-81" formtarget="_blank" role="button">Classroom</button></a>
+      <a href="https://redacao.pr.gov.br/login"><button class="button-81" target="_blank" role="button">Redação Paraná</button></a>
+      <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" target="_blank" role="button">Ingles Paraná</button></a>
+      <a href="https://classroom.google.com/"><button class="button-81" target="_blank" role="button">Classroom</button></a>
       <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
