--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <main>
       <p>Este é um site para você ter acesso de forma simples e rápida aos sites do estado usados no colégio, bons estudos!</p>
-      <button onClick="javascript:window.open('https://redacao.pr.gov.br/login', '_blank') class="button-81" role="button">Redação Paraná</button></a>
+      <button onClick="javascript:window.open('https://redacao.pr.gov.br/login', '_blank') class="button-81" role="button">Redação Paraná</button>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
       <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
