--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
-<div>
+<div> <a href="https://scratch.mit.edu"><button class="button-81" role="button>Scratch</button></a>
       <h2>CECM 11 DE OUTUBRO</h2>
     </main>
     <footer>
