--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
       <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
-      <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
-<div>
+      <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a> 
+      <a href="https://scratch.mit.edu"><button class="button-81" role="button>Scratch</button></a>
+<div>                                          
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
-<div> <a href="https://scratch.mit.edu"><button class="button-81" role="button>Scratch</button></a>
+<div> 
       <h2>CECM 11 DE OUTUBRO</h2>
     </main>
     <footer>
