--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <h2>Bem-vindo, Estudante!</h2>
     </header>
-    <div class="search-container">
+    <div class="search-container">Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
         <form action="https://search.brave.com/search" method="GET">
             <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
             <input type="submit" value="Pesquisar">
@@ -32,10 +32,11 @@
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
-      <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button">Leia Paraná</button></a>
+      <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button""button"Leia Paraná</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
-      <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a> 
-<div>                                                
+      <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
+       <a href=https://scratch.mit.edu/"><button class="button-81" role"button">Scratch</button></a>
+<div> 
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
