--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
-      <a href="https://leiaparana.odilo.us/"><button class="button-81" role="button""button"Leia Paraná</button></a>
+<div>      
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
       <a href=https://scratch.mit.edu/"><button class="button-81" role"button">Scratch</button></a>
