--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div>      
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
-      <a href=https://scratch.mit.edu//"><button class="button-81" role="button">Scratch></a>
+      <a href="https://scratch.mit.edu//"><button class="button-81" role="button">Scratch></a>
 <div> 
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
