--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
+      <a href=https://leiaparana.odilo.us/?locale=pt/"><button class="button-81" role="button">Leia Parana</button></a>
 <div> 
       <h2>CECM 11 DE OUTUBRO</h2>
-    </main>
-    <footer>
+    </main>    <footer>
       <div class="image-container">
       <img src="https://web.celepar.pr.gov.br/drupal/images/logo_parana_400x173.png" alt="Governo Parana" style="width:190px;">
       </div>
