só uma corijida

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <h2>Bem-vindo, Estudante!</h2>
     </header>
-    <div class="search-container"><!--Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.-->
+    <div class="search-container">
         <form action="https://search.brave.com/search" method="GET">
             <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
             <input type="submit" value="Pesquisar">
