--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
+      <a href="https://https://translate.google.com.br/?hl=pt-BR"><button class="button-81" role="button">Tradutor</button></a>
 <div>
       <a href="https://scratch.mit.edu//"><button class="button-81" role="button">Scratch</button></a>
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
