--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <div class="image-container">
       <img src="https://web.celepar.pr.gov.br/drupal/images/logo_parana_400x173.png" alt="Governo Parana" style="width:190px;">
       </div>
+      <img src="/tmp/guest-lpvzxe/Downloads/animation_lm68khj2_small.gif"  class"gif" alt="">
+      </div>
     </footer>
   </body>
 </html>
