--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  //SITE ORIGINALMENTE FEITO POR GUSTAVO HENRIQUE (TRANSFERIDO)
   <head>
     <html lang="pt-br">
     <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.oW664zMZPaAmnr0ftIJl5QHaGa?pid=ImgDet&rs=1"/>
@@ -50,4 +51,5 @@
       </div>
     </footer>
   </body>
-</html>
+</html> 
+  //SITE ORIGINALMENTE FEITO POR GUSTAVO HENRIQUE (TRANSFERIDO)
