--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <html lang="pt-br">
     <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.oW664zMZPaAmnr0ftIJl5QHaGa?pid=ImgDet&rs=1"/>
-    <title>Redirecionamento</title>
+    <title>Site de Jogos da tropa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <div style="display: flex;">
