--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#">Rápido Acesso</a></li>
-        <li><a href="participantes.html">Participantes</a></li>
+        <li><a href="#">Jogos</a></li>
+        <li><a href="participantes.html">Burlas e ETC</a></li>
       </ul>
     </nav>
     <header>
-      <h2>Bem-vindo, Estudante!</h2>
+      <h2>Vamos Jogar!</h2>
     </header>
     <div class="search-container">
-        <form action="https://search.brave.com/search" method="GET">
+        <form action="https://chatgpt.com/">
             <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
             <input type="submit" value="Pesquisar">
         </form>
