--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     </header>
     <div class="search-container">
         <form action="https://chatgpt.com/">
-            <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
+            <input type="text" name="q" placeholder="Pesquisar no ChatGPT" autofocus>
             <input type="submit" value="Pesquisar">
         </form>
     </div>
     <main>
-      <p>Este é um site para você ter acesso de forma simples e rápida aos sites do estado usados no colégio, bons estudos!</p>
-      <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
+      <p>Este é um site para você ter acesso de forma simples a joguinhos da tropa!</p>
+      <a href="https://smashkarts.io/"><button class="button-81" role="button">Smash Karts</button></a>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
