--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#">Rápido Acesso</a></li>
-        <li><a href="participantes.html">Participantes</a></li>
+        <li><a href="#">Jogos</a></li>
+        <li><a href="participantes.html">Outros</a></li>
       </ul>
     </nav>
     <header>
-      <h2>Bem-vindo, Estudante!</h2>
+      <h2>Bora Joga!</h2>
     </header>
     <div class="search-container">
-        <form action="https://search.brave.com/search" method="GET">
-            <input type="text" name="q" placeholder="Pesquisar no Brave" autofocus>
+        <form action="https://chatgpt.com/" method="GET">
+            <input type="text" name="q" placeholder="Pesquisar no ChatGPT" autofocus>
             <input type="submit" value="Pesquisar">
         </form>
     </div>
     <main>
-      <p>Este é um site para você ter acesso de forma simples e rápida aos sites do estado usados no colégio, bons estudos!</p>
+      <p>Este é um site para você ter acesso de forma simples e rápida aos Joguinhos hihi!</p>
       <a href="https://redacao.pr.gov.br/login"><button class="button-81" role="button">Redação Paraná</button></a>
       <a href="http://inglesparana.learn.corporate.ef.com/"><button class="button-81" role="button">Ingles Paraná</button></a>
       <a href="https://classroom.google.com/"><button class="button-81" role="button">Classroom</button></a>
