--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="#">Jogos</a></li>
-        <li><a href="participantes.html">Burlas e ETC</a></li>
+        <li><a href="participantes.html">Burlas e etc</a></li>
       </ul>
     </nav>
     <header>
