--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <p>Este é um site para você ter acesso de forma simples a joguinhos da tropa!</p>
       <a href="https://smashkarts.io/"><button class="button-81" role="button">Smash Karts</button></a>
-      <a href="http://https://1v1lol.me//"><button class="button-81" role="button">1v1 LOL</button></a>
+      <a href="http://https://1v1lol//"><button class="button-81" role="button">1v1 LOL</button></a>
       <a href="https://www.haxball.com//"><button class="button-81" role="button">HaxBall</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
