--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <p>Este é um site para você ter acesso de forma simples a joguinhos da tropa!</p>
       <a href="https://smashkarts.io/"><button class="button-81" role="button">Smash Karts</button></a>
-      <a href="http://https://www.google.com/search?q=1v1lol&rlz=1C1GCEA_enBR1120BR1120&oq=1v1lol&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCDE5MTRqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8/"><button class="button-81" role="button">1v1 LOL</button></a>
+      <a href="http:/https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi4raCb6-aLAxXFALkGHU7IHiIQFnoECAoQAQ&url=https%3A%2F%2F1v1lol.me%2F&usg=AOvVaw2BRMadV0yXIQmCah0DjbSX&opi=89978449/"><button class="button-81" role="button">1v1 LOL</button></a>
       <a href="https://www.haxball.com//"><button class="button-81" role="button">HaxBall</button></a>
       <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
