--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://smashkarts.io/"><button class="button-81" role="button">Smash Karts</button></a>
       <a href="http:/https://https://1v1lol.me"><button class="button-81" role="button">1v1 LOL</button></a>
       <a href="https://www.haxball.com//"><button class="button-81" role="button">HaxBall</button></a>
-      <a href="https://pt.khanacademy.org/"><button class="button-81" role="button">Khan Academy</button></a>
+      <a href="https://slowroads.io"><button class="button-81" role="button">SlowRoads</button></a>
       <a href="https://cursos.alura.com.br/loginForm?urlAfterLogin=https://cursos.alura.com.br/dashboard"><button class="button-81" role="button">Curso Alura</button></a>
       <a href="https://https://translate.google.com.br/?hl=pt-BR"><button class="button-81" role="button">Tradutor</button></a>
 <div>
