--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="http:/https://https://1v1lol.me"><button class="button-81" role="button">1v1 LOL</button></a>
       <a href="https://www.haxball.com//"><button class="button-81" role="button">HaxBall</button></a>
       <a href="https://slowroads.io"><button class="button-81" role="button">SlowRoads</button></a>
-      <a href="https://miniblox.io"><button class="button-81" role="button">Curso Alura</button></a>
+      <a href="https://miniblox.io"><button class="button-81" role="button">MiniBlox</button></a>
       <a href="https://https://translate.google.com.br/?hl=pt-BR"><button class="button-81" role="button">Tradutor</button></a>
 <div>
       <a href="https://scratch.mit.edu//"><button class="button-81" role="button">Scratch</button></a>
