--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="https://miniblox.io"><button class="button-81" role="button">MiniBlox</button></a>
       <a href="https://venge.io"><button class="button-81" role="button">Venge</button></a>
 <div>
-      <a href="https://scratch.mit.edu//"><button class="button-81" role="button">Scratch</button></a>
+      <a href="https://betrayal.io"><button class="button-81" role="button">Among us shopee</button></a>
       <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
