--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="https://venge.io"><button class="button-81" role="button">Venge</button></a>
 <div>
       <a href="https://betrayal.io"><button class="button-81" role="button">Among us shopee</button></a>
-      <a href="https://github.com/"><button class="button-81" role="button">Github</button></a>
+      <a href="https://jklm.fun"><button class="button-81" role="button">Jogo Da Palavra</button></a>
       <a href="https://www.matific.com/bra/pt-br/home/"><button class="button-81" role="button">Matific</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
       <a href="https://leiaparana.odilo.us/?locale=pt/"><button class="button-81" role="button">Leia Parana</button></a>
