--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div>
       <a href="https://betrayal.io"><button class="button-81" role="button">Among us shopee</button></a>
       <a href="https://jklm.fun"><button class="button-81" role="button">Jogo Da Palavra</button></a>
-      <a href="https:https://makeitmeme.com/pt/"><button class="button-81" role="button">Jogo do Meme</button></a>
+      <a href="https://makeitmeme.com"><button class="button-81" role="button">Jogo do Meme</button></a>
       <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
       <a href="https://leiaparana.odilo.us/?locale=pt/"><button class="button-81" role="button">Leia Parana</button></a>
       <a href="https://www.google.com/intl/pt-br/drive/about.html"><button class="button-81" role="button">Drive</button></a>
