--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="https://betrayal.io"><button class="button-81" role="button">Among us shopee</button></a>
       <a href="https://jklm.fun"><button class="button-81" role="button">Jogo Da Palavra</button></a>
       <a href="https://makeitmeme.com"><button class="button-81" role="button">Jogo do Meme</button></a>
-      <a href="https://quizizz.com/"><button class="button-81" role="button">Quizizz</button></a>
+      <a href="https://eaglercraft.com/#google_vignette"><button class="button-81" role="button">Minecraft</button></a>
       <a href="https://leiaparana.odilo.us/?locale=pt/"><button class="button-81" role="button">Leia Parana</button></a>
       <a href="https://www.google.com/intl/pt-br/drive/about.html"><button class="button-81" role="button">Drive</button></a>
 <div> 
