--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <div style="display: flex;">
-  <div style="flex: 1; border-right: 5px solid #000;"></div> <!-- Elemento 1 -->
-  <div style="flex: 1;"></div> <!-- Elemento 2 -->
-</div>
+      <div style="flex: 1; border-right: 5px solid #000;"></div> <!-- Elemento 1 -->
+      <div style="flex: 1;"></div> <!-- Elemento 2 -->
+    </div>
   </head>
   <body>
     <nav>
@@ -29,19 +29,16 @@
     </div>
     <main>
       <p>Este é um site para você ter acesso de forma simples a joguinhos da tropa!</p>
-      <a href="https://smashkarts.io/"><button class="button-81" role="button">Smash Karts</button></a>
-      <a href="http:/https://https://1v1lol.me"><button class="button-81" role="button">1v1 LOL</button></a>
-      <a href="https://www.haxball.com//"><button class="button-81" role="button">HaxBall</button></a>
-      <a href="https://slowroads.io"><button class="button-81" role="button">SlowRoads</button></a>
-      <a href="https://miniblox.io"><button class="button-81" role="button">MiniBlox</button></a>
-      <a href="https://venge.io"><button class="button-81" role="button">Venge</button></a>
-<div>
-      <a href="https://betrayal.io"><button class="button-81" role="button">Among us shopee</button></a>
-      <a href="https://jklm.fun"><button class="button-81" role="button">Jogo Da Palavra</button></a>
-      <a href="https://makeitmeme.com"><button class="button-81" role="button">Jogo do Meme</button></a>
-      <a href="https://eaglercraft.com/#google_vignette"><button class="button-81" role="button">Minecraft</button></a>
-<div> 
-
-    </footer>
+      <a href="https://smashkarts.io/" target="_blank"><button class="button-81" role="button">Smash Karts</button></a>
+      <a href="http://https://1v1lol.me" target="_blank"><button class="button-81" role="button">1v1 LOL</button></a>
+      <a href="https://www.haxball.com//" target="_blank"><button class="button-81" role="button">HaxBall</button></a>
+      <a href="https://slowroads.io" target="_blank"><button class="button-81" role="button">SlowRoads</button></a>
+      <a href="https://miniblox.io" target="_blank"><button class="button-81" role="button">MiniBlox</button></a>
+      <a href="https://venge.io" target="_blank"><button class="button-81" role="button">Venge</button></a>
+      <a href="https://betrayal.io" target="_blank"><button class="button-81" role="button">Among us shopee</button></a>
+      <a href="https://jklm.fun" target="_blank"><button class="button-81" role="button">Jogo Da Palavra</button></a>
+      <a href="https://makeitmeme.com" target="_blank"><button class="button-81" role="button">Jogo do Meme</button></a>
+      <a href="https://eaglercraft.com/#google_vignette" target="_blank"><button class="button-81" role="button">Minecraft</button></a>
+    </main>
   </body>
 </html>
