--- a/index.html
+++ b/index.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
-<html> 
-  <head>
-    <html lang="pt-br">
-    <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.oW664zMZPaAmnr0ftIJl5QHaGa?pid=ImgDet&rs=1"/>
-    <title>Site de Jogos da tropa</title>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Imagem com Botões e Efeito de Aumento</title>
     <link rel="stylesheet" href="style.css">
-    <div style="display: flex;">
-      <div style="flex: 1; border-right: 5px solid #000;"></div> <!-- Elemento 1 -->
-      <div style="flex: 1;"></div> <!-- Elemento 2 -->
+</head>
+<body>
+
+    <!-- Imagem de fundo com efeito de zoom e botões clicáveis -->
+    <div class="banner">
+        <div class="conteudo-botoes">
+            <a href="https://seulink.com" class="botao">Botão 1</a>
+            <a href="https://outrolink.com" class="botao">Botão 2</a>
+            <a href="https://maisumlink.com" class="botao">Botão 3</a>
+        </div>
     </div>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="#">Jogos</a></li>
-        <li><a href="participantes.html">Burlas e Etc</a></li>
-      </ul>
-    </nav>
-    <header>
-      <h2>Vamos Jogar!</h2>
-    </header>
-    <div class="search-container">
-        <form action="https://chatgpt.com/">
-            <input type="text" name="q" placeholder="Pesquisar no ChatGPT" autofocus>
-            <input type="submit" value="Pesquisar">
-        </form>
-    </div>
-    <main>
-      <p>Este é um site para você ter acesso de forma simples a joguinhos da tropa!</p>
-      <a href="https://smashkarts.io/" target="_blank"><button class="button-81" role="button">Smash Karts</button></a>
-      <a href="http://https://1v1lol.me" target="_blank"><button class="button-81" role="button">1v1 LOL</button></a>
-      <a href="https://www.haxball.com//" target="_blank"><button class="button-81" role="button">HaxBall</button></a>
-      <a href="https://slowroads.io" target="_blank"><button class="button-81" role="button">SlowRoads</button></a>
-      <a href="https://miniblox.io" target="_blank"><button class="button-81" role="button">MiniBlox</button></a>
-      <a href="https://venge.io" target="_blank"><button class="button-81" role="button">Venge</button></a>
-      <a href="https://betrayal.io" target="_blank"><button class="button-81" role="button">Among us shopee</button></a>
-      <a href="https://jklm.fun" target="_blank"><button class="button-81" role="button">Jogo Da Palavra</button></a>
-      <a href="https://makeitmeme.com" target="_blank"><button class="button-81" role="button">Jogo do Meme</button></a>
-      <a href="https://eaglercraft.com/#google_vignette" target="_blank"><button class="button-81" role="button">Minecraft</button></a>
-    </main>
-  </body>
+
+</body>
 </html>
